--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/elijahmylcev/eco"
   },
-  "author": "Elijah",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/elijahmylcev/eco"
